--- a/index.html
+++ b/index.html
@@ -52,10 +52,31 @@
             </div>
         </div>
         <div class="scroll-info">
+            <div class="phone-info">
+                <div class="salute fi-line">Hi, I am</div>
+                <div class="fname fi-line">Soumyadeep Bhattacharya</div>
+                <div class="designation fi-line">Frontend Developer</div>
+
+                <div class="phone-info-footer">
+                    <div class="fi-footer">
+                        <div class="find-me-on">Find me on</div>
+                        <div class="fi-icons">
+                            <div class="fi-icon">
+                                <div class="fi-icon-top">
+                                    <img src="./assets/linkedin.png" alt="">
+                                </div>
+                            </div>
+                            <div class="fi-icon">
+                                <div class="fi-icon-top">
+                                    <img src="./assets/github.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="about-section" id="about">
                 Consectetur magna laboris aliquip proident cupidatat esse ex dolore aliqua officia.
-                <br><br>
-                Elit qui magna consectetur nulla duis dolor ipsum nulla deserunt non cillum est. Irure consectetur do incididunt quis laborum mollit reprehenderit id nostrud excepteur nulla. Elit enim qui esse qui adipisicing consequat velit occaecat irure commodo excepteur sit duis.
                 <br>
                 <br>
                 Laboris aliqua reprehenderit cupidatat nisi ad minim enim. Eiusmod aliqua cupidatat nisi nisi sint. Aliqua aliqua nulla Lorem irure officia nulla. Laborum labore aute voluptate elit nulla velit laborum veniam ex consectetur incididunt ullamco consequat consequat. Labore ex consectetur consectetur aliquip quis ipsum sunt. Laboris deserunt sint do velit cupidatat anim tempor tempor aliqua.
@@ -73,6 +94,11 @@
                             <div class="exp-top">
                                 <div class="exp-title">Frontend Developer</div>
                                 <div class="exp-employer">Sunbase</div>
+                                <div class="phone-timeline">
+                                    <div class="expt-from">Dec 2021</div>
+                                    <div>-</div>
+                                    <div class="expt-to">Present</div>
+                                </div>
                             </div>
                             <div class="exp-pts">
                                 Aliqua labore est sunt nulla. Irure mollit amet ex id irure laborum Lorem magna ad qui veniam. Proident excepteur ad aliqua laborum consectetur ad officia magna sit deserunt ullamco. Ut cupidatat proident laboris nulla ipsum laboris pariatur cupidatat mollit nulla ipsum id labore. Pariatur in Lorem reprehenderit nostrud sunt ad eu aute tempor culpa.
@@ -89,6 +115,11 @@
                             <div class="exp-top">
                                 <div class="exp-title">Backend Developer Intern</div>
                                 <div class="exp-employer">Instavans</div>
+                                <div class="phone-timeline">
+                                    <div class="expt-from">May 2021</div>
+                                    <div>-</div>
+                                    <div class="expt-to">Nov 2021</div>
+                                </div>
                             </div>
                             <div class="exp-pts">
                                 Aliqua labore est sunt nulla. Irure mollit amet ex id irure laborum Lorem magna ad qui veniam. Proident excepteur ad aliqua laborum consectetur ad officia magna sit deserunt ullamco. Ut cupidatat proident laboris nulla ipsum laboris pariatur cupidatat mollit nulla ipsum id labore. Pariatur in Lorem reprehenderit nostrud sunt ad eu aute tempor culpa.
