--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="fi-top">
                 <div class="salute fi-line">Hi, I am</div>
                 <div class="fname fi-line">Soumyadeep Bhattacharya</div>
-                <div class="designation fi-line">Frontend Developer</div>
+                <div class="designation fi-line">Software Developer</div>
 
                 <div class="fi-list">
                     <div class="fil-block" onclick="document.getElementById('about').scrollIntoView({behavior:'smooth'})">
@@ -38,16 +38,27 @@
             </div>
             <div class="fi-footer">
                 <div class="fi-icons">
-                    <div class="fi-icon">
-                        <div class="fi-icon-top">
-                            <img src="./assets/linkedin.png" alt="">
+                    <a href="https://www.linkedin.com/in/soumyadeep-bhattacharya-65b74b170/" target="_blank" title="LinkedIn">
+                        <div class="fi-icon">
+                            <div class="fi-icon-top">
+                                <img src="./assets/linkedin.png" alt="">
+                            </div>
                         </div>
-                    </div>
-                    <div class="fi-icon">
-                        <div class="fi-icon-top">
-                            <img src="./assets/github.png" alt="">
+                    </a>
+                    <a href="https://github.com/SBhattacharya45" target="_blank" title="Github">
+                        <div class="fi-icon">
+                            <div class="fi-icon-top">
+                                <img src="./assets/github.png" alt="">
+                            </div>
                         </div>
-                    </div>
+                    </a>
+                    <a href="https://drive.google.com/file/d/1qEcCs82FaMsdoTptYr74ZxPPX5hSBh4s/view" target="_blank" title="Resume">
+                        <div class="fi-icon">
+                            <div class="fi-icon-top">
+                                <img src="./assets/resume.png" alt="">
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -55,31 +66,41 @@
             <div class="phone-info">
                 <div class="salute fi-line">Hi, I am</div>
                 <div class="fname fi-line">Soumyadeep Bhattacharya</div>
-                <div class="designation fi-line">Frontend Developer</div>
+                <div class="designation fi-line">Software Developer</div>
 
                 <div class="phone-info-footer">
                     <div class="fi-footer">
                         <div class="find-me-on">Find me on</div>
                         <div class="fi-icons">
-                            <div class="fi-icon">
-                                <div class="fi-icon-top">
-                                    <img src="./assets/linkedin.png" alt="">
+                            <a href="https://www.linkedin.com/in/soumyadeep-bhattacharya-65b74b170/" target="_blank">
+                                <div class="fi-icon">
+                                    <div class="fi-icon-top">
+                                        <img src="./assets/linkedin.png" alt="">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="fi-icon">
-                                <div class="fi-icon-top">
-                                    <img src="./assets/github.png" alt="">
+                            </a>
+                            <a href="https://github.com/SBhattacharya45" target="_blank">
+                                <div class="fi-icon">
+                                    <div class="fi-icon-top">
+                                        <img src="./assets/github.png" alt="">
+                                    </div>
                                 </div>
-                            </div>
+                            </a>
+                            <a href="https://drive.google.com/file/d/1qEcCs82FaMsdoTptYr74ZxPPX5hSBh4s/view" target="_blank">
+                                <div class="fi-icon">
+                                    <div class="fi-icon-top">
+                                        <img src="./assets/resume.png" alt="">
+                                    </div>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="about-section" id="about">
-                Consectetur magna laboris aliquip proident cupidatat esse ex dolore aliqua officia.
-                <br>
-                <br>
-                Laboris aliqua reprehenderit cupidatat nisi ad minim enim. Eiusmod aliqua cupidatat nisi nisi sint. Aliqua aliqua nulla Lorem irure officia nulla. Laborum labore aute voluptate elit nulla velit laborum veniam ex consectetur incididunt ullamco consequat consequat. Labore ex consectetur consectetur aliquip quis ipsum sunt. Laboris deserunt sint do velit cupidatat anim tempor tempor aliqua.
+                Since my college days, I had a passion for tinkering with web applications. Nowadays that <strong>passion</strong> has transitioned into a fulltime job of coming up with efficient implementations for multitudes of features, serving <strong>hundreds of users</strong> every day.
+                <br><br>
+                Currently working as a <strong>frontend developer</strong>, my focus has been on creating <strong>user-friendly interfaces</strong> while making it look modern and sleek. When I'm away from my keyboard, you can find me riding my bike or brainstorming about neat little projects which strikes my fancy.
             </div>
             <div id="experience" class="exp-section">
                 <div class="exp-header">Experience</div>
@@ -101,7 +122,23 @@
                                 </div>
                             </div>
                             <div class="exp-pts">
-                                Aliqua labore est sunt nulla. Irure mollit amet ex id irure laborum Lorem magna ad qui veniam. Proident excepteur ad aliqua laborum consectetur ad officia magna sit deserunt ullamco. Ut cupidatat proident laboris nulla ipsum laboris pariatur cupidatat mollit nulla ipsum id labore. Pariatur in Lorem reprehenderit nostrud sunt ad eu aute tempor culpa.
+                                <div>
+                                    I work on building and maintaining multiple user-facing interfaces while ensuring <strong>efficient</strong> under-the-hood performance. <strong>Communicating</strong> across multiple teams including designers and backend developers, I <strong>lead a team</strong> of developers <strong>ensuring proper implementation and code quality</strong> for enhancements and new features.
+                                </div>
+                                <div class="exp-skills">
+                                    <div class="skill-block">
+                                        HTML/CSS
+                                    </div>
+                                    <div class="skill-block">
+                                        Javascript
+                                    </div>
+                                    <div class="skill-block">
+                                        JSP
+                                    </div>
+                                    <div class="skill-block">
+                                        Java
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -122,7 +159,17 @@
                                 </div>
                             </div>
                             <div class="exp-pts">
-                                Aliqua labore est sunt nulla. Irure mollit amet ex id irure laborum Lorem magna ad qui veniam. Proident excepteur ad aliqua laborum consectetur ad officia magna sit deserunt ullamco. Ut cupidatat proident laboris nulla ipsum laboris pariatur cupidatat mollit nulla ipsum id labore. Pariatur in Lorem reprehenderit nostrud sunt ad eu aute tempor culpa.
+                                <div>
+                                    I worked on <strong>integrating APIs</strong> provided by major telecom operators for the purpose of <strong>SIM based tracking</strong> of freight vehicles. I collaborated with logistic solution providers to implement better tracking using their APIs and <strong>communicated</strong> regarding requirements and documentations.
+                                </div>
+                                <div class="exp-skills">
+                                    <div class="skill-block">
+                                        Node.js
+                                    </div>
+                                    <div class="skill-block">
+                                        MongoDB
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -134,17 +181,21 @@
                     <div class="pro-block">
                         <div class="pro-block-header">
                             <div class="pro-title">ExpenseDesk</div>
-                            <div class="pro-link">
-                                <div class="pro-link-top">
-                                    <img src="./assets/link.png" alt="">
+                            <a href="https://expense-fe-ashen.vercel.app/" target="_blank">
+                                <div class="pro-link">
+                                    <div class="pro-link-top">
+                                        <img src="./assets/link.png" alt="">
+                                    </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="pro-txt">
                             <div class="pro-img">
                                 <img src="./assets/expensedesk.png" alt="">
                             </div>
-                            <div>Aliqua veniam nostrud occaecat adipisicing magna velit anim sunt sint ullamco minim pariatur amet sit. Veniam velit anim magna veniam ut ad incididunt. Irure anim non consequat anim sint ad exercitation et.</div>
+                            <div>
+                                A expense tracking solution, aimed at providing an easy way of keeping <strong>track</strong> of all your expenses and incomes while providing at a glance information <strong>detailing</strong> monthly spending.
+                            </div>
                             <div class="pro-skills">
                                 <div class="skill-block">
                                     Next.js
@@ -161,17 +212,21 @@
                     <div class="pro-block">
                         <div class="pro-block-header">
                             <div class="pro-title">Resume Builder</div>
-                            <div class="pro-link">
-                                <div class="pro-link-top">
-                                    <img src="./assets/link.png" alt="">
+                            <a href="https://resume-builder-mu-ebon.vercel.app/" target="_blank">
+                                <div class="pro-link">
+                                    <div class="pro-link-top">
+                                        <img src="./assets/link.png" alt="">
+                                    </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="pro-txt">
                             <div class="pro-img">
                                 <img src="./assets/resumebuilder.png" alt="">
                             </div>
-                            <div>Aliqua veniam nostrud occaecat adipisicing magna velit anim sunt sint ullamco minim pariatur amet sit. Veniam velit anim magna veniam ut ad incididunt. Irure anim non consequat anim sint ad exercitation et.</div>
+                            <div>
+                                Looking to create a basic resume but using a text editor feels like a chore? <br><br>That was the motivation behind this application which aims at providing a <strong>easy</strong> way to generate a basic resume by using a <strong>form</strong> to capture user information.
+                            </div>
                             <div class="pro-skills">
                                 <div class="skill-block">
                                     React
