--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                                 </div>
                             </div>
                             <div class="exp-pts">
-                                <div>
-                                    I work on building and maintaining multiple user-facing interfaces while ensuring <strong>efficient</strong> under-the-hood performance. <strong>Communicating</strong> across multiple teams including designers and backend developers, I <strong>lead a team</strong> of developers <strong>ensuring proper implementation and code quality</strong> for enhancements and new features.
+                                <div class="exp-info">
+                                    I work on building and maintaining multiple user-facing interfaces while ensuring <strong>efficient</strong> under-the-hood performance.<br><br><strong>Communicating</strong> across multiple teams including designers and backend developers, I <strong>lead a team</strong> of developers <strong>ensuring proper implementation and code quality</strong> for enhancements and new features.
                                 </div>
                                 <div class="exp-skills">
                                     <div class="skill-block">
@@ -159,8 +159,8 @@
                                 </div>
                             </div>
                             <div class="exp-pts">
-                                <div>
-                                    I worked on <strong>integrating APIs</strong> provided by major telecom operators for the purpose of <strong>SIM based tracking</strong> of freight vehicles. I collaborated with logistic solution providers to implement better tracking using their APIs and <strong>communicated</strong> regarding requirements and documentations.
+                                <div class="exp-info">
+                                    I worked on <strong>integrating APIs</strong> provided by major telecom operators for the purpose of <strong>SIM based tracking</strong> of freight vehicles.<br><br>I collaborated with logistic solution providers to implement better tracking using their APIs and <strong>communicated</strong> regarding requirements and documentations.
                                 </div>
                                 <div class="exp-skills">
                                     <div class="skill-block">
@@ -193,7 +193,7 @@
                             <div class="pro-img">
                                 <img src="./assets/expensedesk.png" alt="">
                             </div>
-                            <div>
+                            <div class="pro-info">
                                 A expense tracking solution, aimed at providing an easy way of keeping <strong>track</strong> of all your expenses and incomes while providing at a glance information <strong>detailing</strong> monthly spending.
                             </div>
                             <div class="pro-skills">
@@ -224,7 +224,7 @@
                             <div class="pro-img">
                                 <img src="./assets/resumebuilder.png" alt="">
                             </div>
-                            <div>
+                            <div class="pro-info">
                                 Looking to create a basic resume but using a text editor feels like a chore? <br><br>That was the motivation behind this application which aims at providing a <strong>easy</strong> way to generate a basic resume by using a <strong>form</strong> to capture user information.
                             </div>
                             <div class="pro-skills">
